--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,48 @@
-h1 {
-  color: $primary-color;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.stop-img {
+  max-width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+.text-section {
+  .warning {
+    font-weight: bold;
+    text-wrap: balance;
+    color: $primary-color;
+
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  p {
+    text-align: justify;
+    margin-top: 10px;
+  }
+}
+
+.legal-info {
+  text-wrap: balance;
+  text-align: center;
+  font-size: 18px;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 1000px) {
+  .container {
+    flex-direction: row;
+  }
 }
