--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -1,13 +1,17 @@
 @use "../abstracts/colors" as *;
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto&display=swap");
 
-* {
+body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 22px;
   color: $primary-text-color;
+
+  background-color: $background-color;
 }
 
-body {
-  background-color: $background-color;
+main {
+  height: 100vh;
+  padding: 30px;
 }
